paginas facturacion y reportes + apis swagger

--- a/src/app/pages/facturacion/facturacion.component.html
+++ b/src/app/pages/facturacion/facturacion.component.html
@@ -1,4 +1,6 @@
-<h2 class="content-block">Facturacion</h2>
+<h2 class="content-block">Facturación</h2>
 <div class="content-block">
-    <div class="dx-card responsive-paddings">Put your content here</div>
+    <div class="dx-card responsive-paddings">
+
+    </div>
 </div>
