--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,10 +9,10 @@
     </h6>
 
     <p>
-      <dx-button type="default" icon="money" text="Inicia con facturación" (onClick)="helloWorld()"></dx-button>
+      <dx-button type="default" icon="money" text="Inicia con facturación" (onClick)="navigateToFacturacion()"></dx-button>
     </p>
     <p>
-      <dx-button type="success" icon="chart" text="Inicia con los reportes" (onClick)="helloWorld()"></dx-button>
+      <dx-button type="success" icon="chart" text="Inicia con los reportes" (onClick)="navigateToReportes()"></dx-button>
     </p>
     
     <p><br></p>
