--- a/src/app/pages/categorias/categorias.component.html
+++ b/src/app/pages/categorias/categorias.component.html
@@ -1,7 +1,7 @@
-<h2 class="content-block">Facturas</h2>
+<h2 class="content-block">Categorias</h2>
 
 <dx-data-grid class="dx-card wide-card"
-  id="facturasGrid"
+  id="categoriasGrid"
   [dataSource]="remoteDataSource"
   [remoteOperations]="false"
   [showBorders]="true"
@@ -21,10 +21,8 @@
     [allowUpdating]="true"
     [allowDeleting]="true"></dxo-editing> -->
 
-  <dxi-column dataField="numeroFactura" caption="Numero de Factura"></dxi-column>
-  <dxi-column dataField="fechaExpedicion" caption="Fecha de Expedición" dataType="date"></dxi-column>
-  <dxi-column dataField="clienteId" caption="Id de Cliente"></dxi-column>
-  <dxi-column dataField="itemsVenta" caption="Items Venta"></dxi-column>
+  <dxi-column dataField="id" caption="Id"></dxi-column>
+  <dxi-column dataField="nombreCategoria" caption="Nombre Categoría"></dxi-column>
   
   <dxo-paging [pageSize]="5"></dxo-paging>
 
