--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,7 +1,7 @@
-<h2 class="content-block">Facturas</h2>
+<h2 class="content-block">Productos</h2>
 
 <dx-data-grid class="dx-card wide-card"
-  id="facturasGrid"
+  id="productosGrid"
   [dataSource]="remoteDataSource"
   [remoteOperations]="false"
   [showBorders]="true"
@@ -21,10 +21,11 @@
     [allowUpdating]="true"
     [allowDeleting]="true"></dxo-editing> -->
 
-  <dxi-column dataField="numeroFactura" caption="Numero de Factura"></dxi-column>
-  <dxi-column dataField="fechaExpedicion" caption="Fecha de Expedición" dataType="date"></dxi-column>
-  <dxi-column dataField="clienteId" caption="Id de Cliente"></dxi-column>
-  <dxi-column dataField="itemsVenta" caption="Items Venta"></dxi-column>
+  <dxi-column dataField="id" caption="Id"></dxi-column>
+  <dxi-column dataField="nombre" caption="Nombre Producto"></dxi-column>
+  <dxi-column dataField="precioUnitario" caption="Precio Unitario" format="currency" ></dxi-column>
+  <dxi-column dataField="cantidadExistencia" caption="Cantidad en Inventario"></dxi-column>
+  <dxi-column dataField="categoriaId" caption="Id Categoría"></dxi-column>
   
   <dxo-paging [pageSize]="5"></dxo-paging>
 
