Corregir la opción de eliminar Categorias

--- a/src/app/pages/categorias/categorias.component.html
+++ b/src/app/pages/categorias/categorias.component.html
@@ -22,6 +22,8 @@
     [allowAdding]="true"
     [allowUpdating]="true"
     [allowDeleting]="true"></dxo-editing> -->
+  <dxo-editing mode="row"
+    [allowDeleting]="true"></dxo-editing>
 
   <dxi-column dataField="id" caption="Id"></dxi-column>
   <dxi-column dataField="nombreCategoria" caption="Nombre Categoría"></dxi-column>
