--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,14 +5,11 @@
     <h6>
       Gracias por usar nuestra aplicación de Facturación
       <br>
-      <small>Esta aplicación cuenta con dos opciones</small>
+      <small>Esta aplicación cuenta con varios CRUD de los elementos de facturación</small>
     </h6>
 
     <p>
-      <dx-button type="default" icon="money" text="Inicia con facturación" (onClick)="navigateToFacturacion()"></dx-button>
-    </p>
-    <p>
-      <dx-button type="success" icon="chart" text="Inicia con los reportes" (onClick)="navigateToReportes()"></dx-button>
+      <dx-button type="default" icon="money" text="Inicia con clientes para facturación" (onClick)="navigateToFacturacion()"></dx-button>
     </p>
     
   </div>
